#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(RCS_AS,0.1)
AM_INIT_AUTOMAKE(RCS_AS,0.1)
AC_CONFIG_SRCDIR([include/pjmsrp.h])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.
AC_PROG_RANLIB

# Checks for header files.
AC_CHECK_HEADERS([float.h inttypes.h limits.h netdb.h stddef.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h wchar.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_GETGROUPS
AC_CHECK_FUNCS([alarm floor memchr memset pow strchr strstr])

AM_CONDITIONAL(TARGET_PLATFORM_X86_64, test "x$PLATFORM" = "xCENTOS_X86_64")

AC_CONFIG_FILES([Makefile
                 objects/Makefile])
				 
				 
AC_OUTPUT

